# DataSmith

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hermes/: code-cleanup.md  debugging-audit.md  perf-prompt.md  security-audit.md  security-fixes.md
.streamlit/: config.toml
data/: datasmith.db
datasmith/core/: database.py
datasmith/generation/: adjuster.py  engine.py  generator.py  models.py  pipeline.py  quality.py  text_profiles.py
datasmith/imperfections/: analyzer.py  injector.py  profiles.py
datasmith/llm/: __init__.py  client.py  discovery.py  schemas.py
datasmith/schema/: crawler.py  knowledge_graph.py  models.py
datasmith/ui/: components.py  icons.py
docs/: PERFORMANCE.md
pages/: 01_Generate.py  02_About.py
scripts/: analyze_domains.py  crawl_and_analyze.py  crawl_schemas.py
tests/: TESTING_STRATEGY.md  test_batched_pipeline.py  test_crawler.py  test_generation.py  test_generation_edge.py  test_imperfections.py  test_injector_edge.py  test_knowledge_graph.py  test_llm.py  test_llm_client.py
