[project]
name = "datasmith"
version = "0.1.0"
description = "Free open-source synthetic dataset generator with domain-specific imperfections"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "frictionless>=5.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.14",
    "requests>=2.31",
    "kagglehub>=0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gen = ["sdv>=1.15"]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-mock>=3", "flake8>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
